# cmd/main.go
@@ -1,8 +1,12 @@
 package main
 
 import (
+	"context"
 	"log"
 	"net/http"
+	"os"
+	"os/signal"
+	"time"
 
 	_ "subscribe_aggregation-main/docs"
 	"subscribe_aggregation-main/internal/api"
@@ -11,7 +15,6 @@ import (
 	"subscribe_aggregation-main/pkg/logging"
 
 	"github.com/go-chi/chi/v5"
-	_ "github.com/lib/pq"
 	httpSwagger "github.com/swaggo/http-swagger"
 
 	"github.com/pressly/goose/v3"
@@ -20,18 +23,15 @@ import (
 func main() {
 	config.InitDB()
 
-	// Создаем расширение UUID, если не создано
 	_, err := config.DB.Exec(`CREATE EXTENSION IF NOT EXISTS "uuid-ossp";`)
 	if err != nil {
 		log.Fatalf("Failed to create extension: %v", err)
 	}
 
-	// Устанавливаем диалект для goose
 	if err := goose.SetDialect("postgres"); err != nil {
 		log.Fatalf("Failed to set goose dialect: %v", err)
 	}
 
-	// Запускаем миграции из папки internal/storage/migrations
 	if err := goose.Up(config.DB.DB, "internal/storage/migrations"); err != nil {
 		log.Fatalf("Failed to run migrations: %v", err)
 	}
@@ -40,23 +40,45 @@ func main() {
 	handler := api.NewHandler(store)
 
 	r := chi.NewRouter()
-	r.Use(logging.Middleware) // Здесь ваше middleware для логирования (например, api.LoggingMiddleware)
+	r.Use(logging.Middleware)
 
-	// Регистрация роутов
-	r.Post("/subscriptions", handler.CreateSubscription)
-	r.Get("/subscriptions", handler.ListSubscriptions)
-	r.Get("/subscriptions/{id}", handler.GetSubscription)
-	r.Put("/subscriptions/{id}", handler.UpdateSubscription)
-	r.Delete("/subscriptions/{id}", handler.DeleteSubscription)
-	r.Get("/subscriptions/sum", handler.SumSubscriptionsCostHandler)
+	r.Route("/subscriptions", func(r chi.Router) {
+		r.Get("/", handler.ListSubscriptions)
+		r.Post("/", handler.CreateSubscription)
+		r.Get("/{id}", handler.GetSubscription)
+		r.Put("/{id}", handler.UpdateSubscription)
+		r.Delete("/{id}", handler.DeleteSubscription)
+		r.Get("/sum", handler.SumSubscriptionsCostHandler)
+	})
 
-	// Swagger UI
 	r.Get("/swagger/*", httpSwagger.Handler(
 		httpSwagger.URL("http://localhost:8080/swagger/doc.json"),
 	))
 
-	log.Println("Start server :8080")
-	if err := http.ListenAndServe(":8080", r); err != nil {
-		log.Fatalf("Server error: %v", err)
+	srv := &http.Server{
+		Addr:    ":" + config.ConfigInstance.ServerPort,
+		Handler: r,
 	}
+
+	go func() {
+		log.Printf("Start server :%s\n", config.ConfigInstance.ServerPort)
+		if err := srv.ListenAndServe(); err != nil && err != http.ErrServerClosed {
+			log.Fatalf("Server error: %v", err)
+		}
+	}()
+
+	quit := make(chan os.Signal, 1)
+	signal.Notify(quit, os.Interrupt)
+	<-quit
+
+	log.Println("Shutdown Server ...")
+
+	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
+	defer cancel()
+
+	if err := srv.Shutdown(ctx); err != nil {
+		log.Fatalf("Server Shutdown Failed:%+v", err)
+	}
+
+	log.Println("Server exited properly")
 }
